src/objects/AttentionPoint__mdt.object
<CustomObject>
    <description>The custom metadata object will contain specific queries and filters to fetch data related to various objects such as Opportunities, Sales Leads, Contracts, Cases, and others, that can provide valuable insights into an account.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldsToShow__c</fullName>
        <description>Fields to show separated by comma. Maximum Three fields.</description>
        <inlineHelpText>Fields to show separated by comma. Maximum Three fields.</inlineHelpText>
        <label>Fields to Show</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <description>Icon of the attention point tile.</description>
        <inlineHelpText>Icon of the attention point tile.</inlineHelpText>
        <label>Icon</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <description>Object type of the attention point.</description>
        <label>Object Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Account_Create_Change_Request__c</fullName>
                </value>
                <value>
                    <fullName>AccountContactRelation</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>CampaignMember</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Field_Sales_Project_Members__c</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>ProcedureTracker__c</fullName>
                </value>
                <value>
                    <fullName>Product_Profiling__c</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>ServiceAppointment</fullName>
                </value>
                <value>
                    <fullName>Source_Record__c</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>WorkOrder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelationshipField__c</fullName>
        <description>Relationship field api name to use in order to find related records.</description>
        <inlineHelpText>Relationship field api name to use in order to find related records.</inlineHelpText>
        <label>Relationship Field</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relevance__c</fullName>
        <description>Determines the order in which the tiles will be displayed, with the most relevant appearing first.</description>
        <inlineHelpText>Determines the order in which the tiles will be displayed, with the most relevant appearing first.</inlineHelpText>
        <label>Relevance</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOQLQuery__c</fullName>
        <description>SOQL query filter to use in order to find key attention points</description>
        <label>SOQL Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TechnicalComments__c</fullName>
        <label>Technical Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Custom label full name to display a Title of the attention point.</description>
        <inlineHelpText>Custom label full name to display a Title of the attention point.</inlineHelpText>
        <label>Title</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>Account 360 News</label>
    <pluralLabel>Account 360 News</pluralLabel>
</CustomObject>